# zipbomb

./: .gitignore  CMakeLists.txt  README.md  delete_scatter.ps1  installer.nsh  main.c  simulate_full_expansion.bat  simulate_full_expansion.ps1  simulate_full_expansion.sh
VPS/: instrictions.txt
